@@ -13,6 +13,7 @@ import com.gregtechceu.gtceu.api.machine.feature.multiblock.IDisplayUIMachine;
 import com.gregtechceu.gtceu.api.machine.feature.multiblock.IMultiPart;
 import com.gregtechceu.gtceu.api.machine.multiblock.MultiblockDisplayText;
 import com.gregtechceu.gtceu.api.machine.multiblock.WorkableElectricMultiblockMachine;
+import com.gregtechceu.gtceu.api.machine.trait.RecipeHandlerList;
 import com.gregtechceu.gtceu.api.machine.trait.RecipeLogic;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
 import com.gregtechceu.gtceu.api.recipe.GTRecipeType;
@@ -66,9 +67,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
                 this.computationProvider = provider;
             }
             if (part instanceof IObjectHolder objectHolder) {
-                this.objectHolder = objectHolder;
-                this.getCapabilitiesProxy().put(IO.IN, ItemRecipeCapability.CAP,
-                        Collections.singletonList(objectHolder.getAsHandler()));
+                this.getCapabilitiesProxy().put(IO.IN, List.of(RecipeHandlerList.of(IO.IN, objectHolder.getAsHandler())));
             }
         }
 
